# TPCuatrimestralIndividual

./: CMakeLists.txt
Ejercicio 1/: UML.mdj
source/: CMakeLists.txt  DoubleNode.c  DoubleNode.h  LinkedList.c  StaticList.c  StaticList.h
source/Ejercicio 3/: Book.h  DoubleNode.h  Library.c  Library.h  LinkedList.h  Loan.c  Loan.h  Magazine.c  Magazine.h  Material.c  Person.c  Person.h  Student.h  Teacher.h  UML.mdj
source/Exercise 5/: Client.c  Client.h  Excess.c  Excess.h  Manager.c  Manager.h  Movie.c  Movie.h  MovieCard.c  MovieCard.h  MovieClub.c  MovieClub.h
source/Exercise1/: Bag.c  Bag.h  BagLine.c  BagLine.h  Bill.c  Bill.h  BillLine.c  BillLine.h  CMakeLists.txt  Catalog.c  Catalog.h  HouseElectro.c  HouseElectro.h  Label.c  Label.h  MainExercise1.c  Maker.c  Maker.h  Provider.c  Provider.h  UML.mdj
source/Exercise2/: Accessory.c  Accessory.h  Administrator.c  Administrator.h  CMakeLists.txt  Camera.c  Camera.h  MainExercise2.c  Manufacturer.c  Manufacturer.h  PersonShop.c  PersonShop.h  Product.c  Product.h  Provider.c  Provider.h  RegisterUser.c  RegisterUser.h  Sale.c  Sale.h  SaleLine.c  SaleLine.h
source/Exercise3/: Book.c  Book.h  CMakeLists.txt  Library.c  Library.h  Loan.c  Loan.h  Magazine.c  Magazine.h  MainExercise3.c  Material.c  Material.h  Person.c  Person.h  Student.c  Student.h  Teacher.c  Teacher.h  UML.mdj
source/Exercise4/: CMakeLists.txt  ClientHotel.c  ClientHotel.h  Invoice.c  Invoice.h  MainExercise4.c  Receptionist.c  Receptionist.h  Reservation.c  Reservation.h  Room.c  Room.h  UML.mdj
source/Exercise5/: CMakeLists.txt  Client.c  Client.h  Excess.c  Excess.h  MainExercise5.c  Manager.c  Manager.h  Movie.c  Movie.h  MovieCard.c  MovieCard.h  MovieClub.c  MovieClub.h  Untitled.mdj
source/ScannerUtil/: CMakeLists.txt  ScanUtil.c  ScanUtil.h
source/Structs/: CMakeLists.txt  StaticList.c  StaticList.h
